k8s/app/traffic-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traffic-generator
  template:
    metadata:
      labels:
        app: traffic-generator
    spec:
      containers:
      - name: traffic-generator
        image: ecommerce-traffic:latest
        imagePullPolicy: Never
